services/homepage/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://home.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: homepage
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: homepage
    gethomepage.dev/name: Homepage
spec:
  ingressClassName: nginx
  rules:
    - host: home.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
